style(header.css): update header background color

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background: linear-gradient(to left, #5d524d 0%, #403528 59%);
+    background: linear-gradient(to left, #231200 0%, #281602 59%);
     z-index: #999;
 }
 
