--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -22,6 +22,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: rgba(255, 255, 255, 0.984);
+    font-size: 2rem;
     text-align: center;
     font-family: 'cantora one', serif;
     z-index: 1;
