--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -24,7 +24,7 @@
     color: rgba(255, 255, 255, 0.984);
     font-size: 2rem;
     text-align: center;
-    font-family: 'cantora one', serif;
+    font-family: "Cantora One", serif;
     z-index: 1;
     padding: 1rem;
     max-width: 45rem;
