--- a/assets/css/searchseat.css
+++ b/assets/css/searchseat.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(to right, #170f52 0%, #0c0a39 100%);
+    background: linear-gradient(to right, #e2d182 0%, #e0dc61 100%);
     padding-left: 5%;
 }
 
@@ -48,7 +48,7 @@
     appearance: none;
     cursor: pointer;
     text-align: center;
-    font-family: 'cantora one', sans-serif;
+    font-family: 'Cantora One', sans-serif;
 }
 
 .location-item select option {
@@ -68,7 +68,7 @@
     cursor: pointer;
 }
 
-.checkBox input [type="checkbox"] {
+.checkBox input[type="checkbox"] {
     position: relative;
     width: 20px;
     height: 20px;
@@ -81,13 +81,13 @@
     transition: 0.3s ease;
 }
 
-.checkBox input [type="checkbox"]:checked {
+.checkBox input[type="checkbox"]:checked {
     background-color: rgb(0, 0, 0);
 }
 
 .checkBox .label-text {
     font-size: 16px;
-    font-family: 'cantora one', sans-serif;
+    font-family: 'Cantora One', sans-serif;
     color: #000;
 }
 
@@ -106,7 +106,7 @@
     cursor: pointer;
 }
 
-.header-display p{
+.header-display p {
     color: var(--accent);
     margin: 5px;
     font-size: 1.2rem;
@@ -150,7 +150,7 @@ pre {
 
 .datepick span {
     font-size: 16px;
-    font-family: 'cantora one', sans-serif;
+    font-family: 'Cantora One', sans-serif;
     color: #000;
     width: 140px;
     padding: 10px;
@@ -167,19 +167,19 @@ pre {
     font-weight: bold;
     border-radius: 50%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     width: 3rem;
     height: 3rem;
 }
 
 .datepick span:hover {
-    background: #e2d182;
+    background-color: #e2d182;
 }
 
 .calendar-container {
     position: absolute;
-    top: 150%;
+    top: 150px;
     left: 50%;
     transform: translateX(-50%);
     background: white;
@@ -189,7 +189,6 @@ pre {
     z-index: 9999;
 }
 
-/* centering selected date */
 .selected {
     display: flex;
     justify-content: center;
@@ -202,26 +201,23 @@ pre {
 .days div.hover-highlight {
     background-color: #d3d3d3;
     cursor: pointer;
-}
+  }
 
-/* disabled days style */
 .disabled {
     background-color: #e0e0e0;
     color: #a0a0a0;
     text-decoration: line-through;
     cursor: not-allowed;
-}
+  }
 
-/* hover effect on available dates style */
-.hover-highlight {
+  .hover-highlight {
     background-color: #d3d3d3;
-}
+  }
 
-/* current date style */
-.current-date {
+  .current-date {
     background-color: #ffeb3b;
     font-weight: bold;
-}
+  }
 
 .search_button button {
     margin-left: 5px;
