--- a/pages/page3/assets/css/style.css
+++ b/pages/page3/assets/css/style.css
@@ -107,7 +107,138 @@
 
   .seat {
     width: 40px;
-    height: 40px;
+    height: 40px;.booking_procedure {
+        top: 100px;
+        margin-top: -17px;
+        height: 538px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: linear-gradient(to right, #e2d182 0%, #e0dc61 100%);
+        font-family: 'Cantora One', sans-serif;
+    }
+
+    .container {
+        background: rgb(190, 151, 92);
+        border-radius: 30px;
+        height: 440px;
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .header-text {
+        font-size: 15px;
+        margin-top: -31px;
+    }
+
+    .seat-info{
+        margin-left: 24px;
+        margin-top: 2px;
+    }
+
+    .seat-selected-info {
+        margin-top: -20px;
+        font-size: 15px;
+        font-weight: 550;
+        text-align: center;
+        font-family: 'Cantora One', sans-serif;
+    }
+
+    .card {
+        height: 180px;
+        max-width: 90px;
+        width: 100%;
+        background: #a17338;
+        padding: 75px;
+        border-radius: 8px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        left: -175px;
+        margin-top: -13px;
+    }
+
+    .button-container {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 65px;
+    }
+
+    .back_button,
+    .reserve_button {
+        font-family: 'Cantora One', sans-serif;
+        background: #c38124;
+        color: rgb(15, 15, 15);
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        height: 28px;
+        width: 105px;
+        font-size: 16px;
+        transition: all 0.1s;
+        box-shadow: 0px 6px 0px #d06e2d;
+    }
+
+    .back_button:hover,
+    .reserve_button:hover {
+        background: #db810c;
+        transition: 0.3s;
+    }
+
+    .back_button:active,
+    .reserve_button:active {
+        box-shadow: 0px 2px 0px #d35400;
+        position: relative;
+        top: 2px;
+    }
+
+    .seat-grid {
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        gap: 40px;
+        justify-content: center;
+        align-items: center;
+        margin-top: -10px;
+        margin-left: -14px;
+    }
+
+      .row {
+        margin-top: -40px;
+        display: grid;
+        grid-template-columns: repeat(2, 25px);
+        gap: 22px;
+    }
+
+      .seat {
+        width: 40px;
+        height: 40px;
+        background-color: #444;
+        border-radius: 5px;
+        text-align: center;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+
+      .seat-occupied {
+        width: 40px;
+        height: 40px;
+        background-color: #771919;
+        border-radius: 5px;
+        text-align: center;
+        cursor: pointer;
+      }
+
+      .seat:hover {
+        background-color: #1a73e8;
+      }
+
+      .seat.selected {
+        background-color: #1a73e8;
+        color: white;
+      }
     background-color: #444;
     border-radius: 5px;
     text-align: center;
